✨ Added new controllers, services, and refactored DTOs